Fixed pictures overflow on ImagePanels

--- a/src/Configurator/OptionsMenu/pages/PanelsPage/Panel/ImagePanel/style.less
+++ b/src/Configurator/OptionsMenu/pages/PanelsPage/Panel/ImagePanel/style.less
@@ -6,6 +6,7 @@
 		width: 100%;
 		height: 150px;
 		position: relative;
+		overflow: hidden;
 
 		& img {
 			max-width: 100%;
